# agentic-protocol-poc

./: .gitignore  CLAUDE.md  METHODS.txt  README.md  demo-plan.md  pyproject.toml
api/: README.md  app.py  config.py  github_client.py  main.py  models.py  requirements.txt  state_reader.py
demo/: reset_demo.py  sample.py  stage4c-sample.py
docs/: API-BACKLOG.md  AUTHORING.md  BACKLOG.md  HOW-IT-WORKS.md  PROTOCOL-DSL.md  STATUS.md  demo1-transcript.txt  demo2-transcript.txt
examples/: clamp.py  hello.py  token_bucket.py
grumpy/: pr-12.yaml  pr-15.yaml  pr-4.yaml  pr-7.yaml  pr-9.yaml
grumpy-review/: pr-15.yaml  pr-21.yaml  pr-23.yaml
legion-map/: CODEBASE.md
prs/: 114.json  162.json  192.json  62.json
sample/: calc.py  parse.py
socratic/: MANIFEST.txt  OPEN_QUESTIONS-agentic-protocol-engine.adoc  QUESTION_TREE-agentic-protocol-engine.adoc
src/: auth.js  cache.js  demo.js  report.js  util.js
tests/: conftest.py  requirements-dev.txt  test-checks.sh  test-correlation.sh  test-engine.sh  test-fanout-e2e.sh  test-join.sh  test-publish.sh  test-runchecks.sh  test-status-comment.sh  test_apply_fixes.py  test_artifact_fetch.py  test_assemble_mrp.py  test_cap_approval_gate.py  test_cap_authoring_errors.py  test_cap_mp_fanout_gate.py  test_cap_override.py  test_cap_restart.py  test_cap_security.py  test_cap_simple_fanout.py  test_cap_single_agent.py  test_cas.py  test_checks.py  test_cluster_coverage.py  test_code_plan_coverage.py  test_conclude_fix_apply.py  test_conclude_fix_never_silent.py  test_conclude_hook_surfaces.py  test_conclude_preflight.py  (+78 more)
(+809 files in other folders)
